--- a/.emacs.d/lsp.org
+++ b/.emacs.d/lsp.org
@@ -1,3 +1,69 @@
+
+Language servers provide auto completion and syntax highlighting capabilities making them essential for development.
+
+* Lsp Mode
+
+Lsp Mode is a package that adds language server functionalities to Emacs.
+
+** Breadcrumb Header Line
+
+This adds a headerline that shows the scope of where the cursor is in the code. For example if the user is in the main function, the headerline will contain main.
+
+#+begin_src emacs-lisp
+  (defun jm/lsp-mode-setup ()
+    (setq lsp-headerline-breadcrumb-segments '(path-up-to-project file symbols))
+    (lsp-headerline-breadcrumb-mode))
+#+end_src
+
+** Install Lsp Mode
+
+Below I am installing the actual package and adding some basic configuration.
+
+#+begin_src emacs-lisp
+  (use-package lsp-mode
+    :init (setq lsp-keymap-prefix "C-c l") ; Lsp mode prefix
+    :hook (lsp-mode . jm/lsp-mode-setup)
+    :commands (lsp lsp-deferred) ; Startup commands
+    :config (lsp-enable-which-key-integration t))
+#+end_src
+
+** Lsp Additional Packages
+
+*** Lsp-UI
+
+#+begin_src emacs-lisp
+  (use-package lsp-ui
+    :hook (lsp-mode . lsp-ui-mode)
+    :config (setq lsp-ui-sideline-show-diagnostics t))
+#+end_src
+
+*** Lsp-Ivy
+
+#+begin_src emacs-lisp
+  (use-package lsp-ivy :commands lsp-ivy-workspace-symbol)
+#+end_src
+
+** Company Mode
+
+Company is a package that automatically finds completions instead of making the user run a command for completions.
+
+#+begin_src emacs-lisp
+  (use-package company
+    :after lsp-mode
+    :hook (lsp-mode . company-mode)
+    :bind (:map company-active-map ; Map tab to select completion
+                ("<tab>" . company-complete-selection))
+          (:map lsp-mode-map
+                ("<tab>" . company-indent-or-complete-common)))
+#+end_src
+
+** Flycheck
+
+#+begin_src emacs-lisp
+  (use-package flycheck
+    :init (global-flycheck-mode))
+#+end_src
+
 * Language Servers
 
 This will include any language server packages and configuration.
