--- a/.emacs.d/lsp.org
+++ b/.emacs.d/lsp.org
@@ -197,4 +197,8 @@ To install the corresponding LSP, you need to install ~yls~. Using the command ~
 (use-package haskell-mode
   :defer t
   :hook (haskell-mode . lsp-deferred))
+
+(use-package lsp-haskell
+  :defer t
+  :hook (lsp-literate-mode . lsp-deferred))
 #+end_src
