--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -191,6 +191,36 @@ Command Log Mode creates a window that logs all commands and corresponding keybi
   :init (persp-mode))
 #+end_src
 
+
+*** Vertico
+
+Vertico is a package that implements a drop-down like menu in the mini buffer allowing for much better searching.
+
+#+begin_src emacs-lisp
+(use-package vertico
+  :init
+  (vertico-mode))
+#+end_src
+
+One feature of Vertico that is really helpful is that it works with another built-in emacs package, ~savehist~, to save directory history when navigating with Vertico.
+
+#+begin_src emacs-lisp
+(use-package savehist
+  :init
+  (savehist-mode))
+#+end_src
+
+One last feature I will also add is the ~marginalia~ package which adds some nice /footnotes/ to the command information. This can be extra helpful when looking up Elisp functions for example.
+
+#+begin_src emacs-lisp
+(use-package marginalia
+  :after vertico
+  :init
+  (marginalia-mode))
+#+end_src
+
+
+
 * Cosmetic
 
 Packages that change the look of Emacs in some way.
@@ -281,38 +311,6 @@ This adds relative line numbers while excluding certain modes.
   (setq-default display-line-numbers-type 'visual)
   (global-display-line-numbers-mode t)
 #+end_src
-
-* Auto-completion
-
-Packages associated with Emacs auto-completion. This does not include auto-completion from language servers just the auto-completion of commands etc.
-
-** Vertico
-
-Vertico is a package that implements a drop-down like menu in the mini buffer allowing for much better searching.
-
-#+begin_src emacs-lisp
-(use-package vertico
-  :init
-  (vertico-mode))
-#+end_src
-
-One feature of Vertico that is really helpful is that it works with another built-in emacs package, ~savehist~, to save directory history when navigating with Vertico.
-
-#+begin_src emacs-lisp
-(use-package savehist
-  :init
-  (savehist-mode))
-#+end_src
-
-One last feature I will also add is the ~marginalia~ package which adds some nice /footnotes/ to the command information. This can be extra helpful when looking up Elisp functions for example.
-
-#+begin_src emacs-lisp
-(use-package marginalia
-  :after vertico
-  :init
-  (marginalia-mode))
-#+end_src
-
 
 * Keybindings
 
