Fixed issue with dashboard not working with emacsclient

--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -200,7 +200,11 @@ The Emacs dashboard package provides a nice dashboard when first starting up ema
 
 #+begin_src emacs-lisp
 (use-package dashboard
-  :config (dashboard-setup-startup-hook))
+  :config
+  (setq initial-buffer-choice (lambda ()
+                                (get-buffer-create "*dashboard*")
+                                (dashboard-refresh-buffer)))
+  (dashboard-setup-startup-hook))
 #+end_src
 
 * Cosmetic
