--- a/.emacs.d/email.org
+++ b/.emacs.d/email.org
@@ -81,6 +81,11 @@ From here, I can continue onto configuring the ~mu4e~ emacs package.
   (setq mu4e-refile-folder "/[Gmail]/All Mail")
   (setq mu4e-trash-folder "/[Gmail]/Trash")
 
+  (add-to-list 'mu4e-bookmarks
+               '( :name "Flagged messages"
+                  :query "flag:flagged"
+                  :key ?f))
+
   (setq mu4e-maildir-shortcuts
         '((:maildir "/Inbox" :key ?i)
           (:maildir "/[Gmail]/Sent Mail" :key ?s)
@@ -101,6 +106,7 @@ In order to send mail with ~mu4e~, you must also configure an SMTP client.  Base
 
 #+begin_src emacs-lisp
 (use-package smtpmail
+  :after mu4e
   :config
   (setq smtpmail-stream-type 'ssl)
   (setq smtpmail-smtp-server "smtp.gmail.com")
