--- a/.emacs.d/terminal.org
+++ b/.emacs.d/terminal.org
@@ -24,7 +24,8 @@ There are a few packages that you need to install in order to use VTerm.
 Multi-vterm is a package that adds the capability to easily create multiple vterm terminal buffers without having to manually rename them each time.
 
 #+begin_src emacs-lisp
-(use-package multi-vterm)
+(use-package multi-vterm
+  :after vterm)
 #+end_src
 
 * Change Terminal Font
